--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -505,7 +505,7 @@
 	<para><command>setfacl -m u:tux:rx .snapshots</command></para>
       </listitem>
     </itemizedlist>
-    <para>The last method can be performed by snapper, see the SYNC_ACLS setting in
+    <para>The last method can be performed by snapper, see the SYNC_ACL setting in
     <citerefentry><refentrytitle>snapper-configs</refentrytitle><manvolnum>5</manvolnum></citerefentry>.</para>
   </refsect1>
 
@@ -575,7 +575,8 @@
       <citerefentry><refentrytitle>pam_snapper</refentrytitle><manvolnum>8</manvolnum></citerefentry>,
       <citerefentry><refentrytitle>btrfs</refentrytitle><manvolnum>8</manvolnum></citerefentry>,
       <citerefentry><refentrytitle>lvm</refentrytitle><manvolnum>8</manvolnum></citerefentry>,
-      <citerefentry><refentrytitle>attr</refentrytitle><manvolnum>5</manvolnum></citerefentry>
+      <citerefentry><refentrytitle>attr</refentrytitle><manvolnum>5</manvolnum></citerefentry>,
+      <citerefentry><refentrytitle>acl</refentrytitle><manvolnum>5</manvolnum></citerefentry>
     </para>
   </refsect1>
 
