--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -14,14 +14,15 @@ endif
 
 noinst_SCRIPTS = run-all
 
-noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2 owner3	\
-	directory1 missing-directory1 error1 error2 error4 \
+noinst_PROGRAMS = simple1 permissions1 permissions2 permissions3 owner1 owner2 \
+	owner3 directory1 missing-directory1 error1 error2 error4 \
 	$(TMP_XATST)
 
 simple1_SOURCES = simple1.cc common.h common.cc
 
 permissions1_SOURCES = permissions1.cc common.h common.cc
 permissions2_SOURCES = permissions2.cc common.h common.cc
+permissions3_SOURCES = permissions3.cc common.h common.cc
 
 owner1_SOURCES = owner1.cc common.h common.cc
 owner2_SOURCES = owner2.cc common.h common.cc
