- allow to add snapshots subvolume to fstab (for fate#317062)

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -54,6 +54,9 @@ endif
 
 libsnapper_la_LDFLAGS = -version-info @LIBVERSION_INFO@
 libsnapper_la_LIBADD = -lboost_thread-mt -lboost_system-mt -lxml2 -lacl -lz -lm
+if ENABLE_ROLLBACK
+libsnapper_la_LIBADD += -lmount
+endif
 
 pkgincludedir = $(includedir)/snapper
 
