--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -27,7 +27,9 @@ BuildRequires:  gcc-c++
 BuildRequires:  libacl-devel
 BuildRequires:  libtool
 BuildRequires:  libxml2-devel
+%if 0%{?suse_version} > 1230
 BuildRequires:  libbtrfs-devel
+%endif
 %if 0%{?suse_version} > 1310
 BuildRequires:  libmount-devel >= 2.24
 %endif
@@ -167,7 +169,9 @@ Requires:	libacl-devel
 Requires:       libsnapper@LIBVERSION_MAJOR@ = %version
 Requires:       libstdc++-devel
 Requires:       libxml2-devel
+%if 0%{?suse_version} > 1230
 Requires:       libbtrfs-devel
+%endif
 %if 0%{?suse_version} > 1310
 Requires:       libmount-devel >= 2.24
 %endif
