Add conditionals for btrfs library versions
Currently the btrfs library API is not versioned and causes build
problems. Add a configure-time conditional check for btrfs/version.h
that defines BTRFS_LIB_VERSION, otherwise assume the value 100.

Use it to fix breakage of btrfs_read_and_process_send_stream in
btrfsprogs 3.16.

--- a/configure.ac
+++ b/configure.ac
@@ -102,6 +102,7 @@ AC_ARG_ENABLE([zypp], AC_HELP_STRING([--disable-zypp],[Disable zypp plugin suppo
 AM_CONDITIONAL(HAVE_ZYPP, [test "x$with_zypp" = "xyes"])
 
 AC_CHECK_LIB(btrfs, btrfs_read_and_process_send_stream)
+AC_CHECK_HEADERS([btrfs/version.h])
 
 AC_ARG_ENABLE([xattrs], AC_HELP_STRING([--disable-xattrs],[Disable extended attributes support]),
 		[with_xattrs=$enableval],[with_xattrs=yes])
