client: Add option to list snapshots from all configs
$ snapper list -a

will print the same output as 'list' but each table is preceded with
config name and subvolume. This is convenient way to see all configured
snapshots in the system, compared to listing all configs and then typing
each command separately.

--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -310,6 +310,12 @@
 		all, single and pre-post.</para>
 	      </listitem>
 	    </varlistentry>
+	    <varlistentry>
+	      <term><option>-a, --all-configs</option></term>
+	      <listitem>
+		<para>List snapshots from all configs accessible by the user.</para>
+	      </listitem>
+	    </varlistentry>
 	  </variablelist>
 	</listitem>
       </varlistentry>
