--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -477,6 +477,22 @@
 	  <replaceable>number2</replaceable>. This will show a diff of the
 	  content of files and directories that have been created, modified or
 	  deleted in the time between the two snapshots have been made.</para>
+	  <variablelist>
+	    <varlistentry>
+	      <term><option>--diff-cmd</option> <replaceable>command</replaceable></term>
+	      <listitem>
+		<para>Command used for comparing files. The default is
+		<filename>/usr/bin/diff --new-file --unified</filename>. The two files to
+		compare are passed as parameters to the command.</para>
+	      </listitem>
+	    </varlistentry>
+	    <varlistentry>
+	      <term><option>-x, --extensions</option> <replaceable>options</replaceable></term>
+	      <listitem>
+		<para>Extra options passed to the diff command.</para>
+	      </listitem>
+	    </varlistentry>
+	  </variablelist>
 	</listitem>
       </varlistentry>
 
