scripts: rename scripts according to their purpose
The scripts in hourly and daily cron directories are named the same way
which is a bit confusing. I wanted to put the cleanup script into hourly
cron class for testing and the filenames clashed, renaming the scripts
looks like a good idea anyway.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -14,11 +14,11 @@ pam_snapper_SCRIPTS =			\
 
 endif
 
-EXTRA_DIST = snapper-hourly snapper-daily zypp-plugin.py $(pam_snapper_SCRIPTS)
+EXTRA_DIST = snapper-create snapper-cleanup zypp-plugin.py $(pam_snapper_SCRIPTS)
 
 install-data-local:
-	install -D snapper-hourly $(DESTDIR)/etc/cron.hourly/suse.de-snapper
-	install -D snapper-daily $(DESTDIR)/etc/cron.daily/suse.de-snapper
+	install -D snapper-create $(DESTDIR)/etc/cron.hourly/suse.de-snapper-create
+	install -D snapper-cleanup $(DESTDIR)/etc/cron.daily/suse.de-snapper-cleanup
 if HAVE_ZYPP
 	install -D zypp-plugin.py $(DESTDIR)/usr/lib/zypp/plugins/commit/snapper.py
 endif
