- use boost unit test framework

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2,19 +2,15 @@
 # Makefile.am for snapper/testsuite
 #
 
-CXXFLAGS += -std=gnu++0x
-
 INCLUDES = -I$(top_srcdir)
 
-LDADD = ../snapper/libsnapper.la
+LDADD = ../snapper/libsnapper.la -lboost_unit_test_framework
 
 check_PROGRAMS = sysconfig-get1 dirname1 basename1
 
 TESTS = $(check_PROGRAMS)
 
-basename1_SOURCES = basename1.cc common.h
-dirname1_SOURCES = dirname1.cc common.h
-sysconfig_get1_SOURCES = sysconfig-get1.cc common.h
+AM_DEFAULT_SOURCE_EXT = .cc
 
 EXTRA_DIST = $(noinst_SCRIPTS) sysconfig-get1.txt
 
