--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -4,7 +4,7 @@
 
 SUBDIRS = utils
 
-INCLUDES = -I$(top_srcdir) $(DBUS_CFLAGS)
+AM_CPPFLAGS = -I$(top_srcdir) $(DBUS_CFLAGS)
 
 bin_PROGRAMS = snapper
 
