--- a/testsuite-cmp/Makefile.am
+++ b/testsuite-cmp/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper/testsuite-cmp
 #
 
-INCLUDES = -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir)
 
 LDADD = ../snapper/libsnapper.la
 
