--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper/testsuite
 #
 
-INCLUDES = -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir)
 
 LDADD = ../snapper/libsnapper.la -lboost_unit_test_framework
 
