--- a/Makefile.am
+++ b/Makefile.am
@@ -11,14 +11,9 @@ doc_DATA = AUTHORS COPYING
 
 EXTRA_DIST = $(doc_DATA) VERSION LIBVERSION
 
-
 snapper-$(VERSION).tar.bz2: dist-bzip2
 
-package-local: snapper-$(VERSION).tar.bz2
+package: snapper-$(VERSION).tar.bz2
 	rm -f package/snapper-*.tar.bz2
-	rm -f package/*~
-	rm -f package/*.bak
 	mv snapper-$(VERSION).tar.bz2 package/
-
-package: package-local
 
