- install systemd unit files and helper (see gh#openSUSE/snapper#154)

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -20,14 +20,12 @@ snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
 
 libexecdir = /usr/lib/snapper
 
-libexec_PROGRAMS = installation-helper
+libexec_PROGRAMS = installation-helper systemd-helper
 
 installation_helper_SOURCES =		\
 	installation-helper.cc
 
 installation_helper_LDADD = ../snapper/libsnapper.la utils/libutils.la
-
-noinst_PROGRAMS = systemd-helper
 
 systemd_helper_SOURCES =		\
 	systemd-helper.cc		\
