- drop socketpair bits and rename

--- a/configure.ac
+++ b/configure.ac
@@ -154,7 +154,7 @@ AC_OUTPUT(
 	examples/c/Makefile
 	examples/c++-lib/Makefile
 	dbus/Makefile
-	sck/Makefile
+	pipe/Makefile
 	server/Makefile
 	client/Makefile
 	client/utils/Makefile
